apps/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-stripprefix
  namespace: argocd
spec:
  stripPrefix:
    prefixes:
      - /argocd

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/argocd`)
      kind: Rule
      middlewares:
        - name: argocd-stripprefix
      services:
        - name: argocd-server
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-secure
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/argocd`)
      kind: Rule
      middlewares:
        - name: argocd-stripprefix
      services:
        - name: argocd-server
          port: 80
